...
    switch (user?.role) {
      case "Manager":
        return "COMMAND DASHBOARD";
      case "Contractor":
        return "CONTRACTOR PORTAL";
      default:
        return "HOME";
    }
  };

  return (
    <>
      <NavigationContainer>
...
                component={ContractorProfile}
                options={{ title: "CONTRACTOR PROFILE" }}
              />
              <Stack.Screen
                name="ContractorAssignment"
                component={ContractorAssignment}
                options={{ title: "CONTRACTOR ASSIGNMENT" }}
              />
            </>
          )}
        </Stack.Navigator>
      </NavigationContainer>

...
