appId: com.blakemedlock.ComplianceApp
---

- runFlow:
    file: subflow_login.yaml
    env:
      USER_EMAIL: "manager@test.co.uk"
      USER_PASS: "password"

- tapOn: { id: "menu-item-BuildingServices" }
- assertVisible: "Asset Register"

- assertVisible: { id: "btn-nav-add-asset" }
- assertVisible: { id: "btn-assign-asset-0" }

- tapOn: { id: "btn-assign-asset-0" }
- assertVisible: "CONTRACTOR ASSIGNMENT"
- back

- tapOn: { id: "header-logout-btn" }

- runFlow:
    file: subflow_login.yaml
    env:
      USER_EMAIL: "employee@raytheon.com"
      USER_PASS: "pass123"

- tapOn: { id: "menu-item-BuildingServices" }
- assertVisible: "Asset Register"

- assertNotVisible: "+ NEW"
- assertNotVisible: "ASSIGN"