appId: com.blakemedlock.ComplianceApp
---
- runFlow:
    file: subflow_login.yaml
    env:
      USER_EMAIL: "manager@test.co.uk"
      USER_PASS: "password"

- tapOn: { id: "menu-item-BuildingServices" }
- tapOn: { id: "btn-assign-asset-0" }

- tapOn: { id: "contractor-item-0" }

- assertVisible: "Assigned"
- tapOn: "OK"

- assertVisible: "Asset Register"
